changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix for bug include/autoconf.h.in - customize stack of weapons bug.
This commit also fixes some other things, like update name not getting
sent to the client when doing the prepare.
types/weapon_improver/weapon_improver.c: All changes in prepare_weapon():
    Split stack of weapons so other items don't disappear.  Move the
    draw_info() call after updating the weapon name, so it uses new
    weapon name.  Add call to esrv_update_item() to update the name
    of the weapon.
MSW 2009-04-05
	

socket/item.c, socket/loop.c, socket/lowlevel.c, socket/metaserver.c: Fix some
  format string bugs (found using the GCC format __attribute__ for some
  crossfire functions).
Arvid Norlander 2009-02-17

common/map.c: Make a function static.
common/loader.l, common/object.c, common/readable.c: Fix some format string bugs
  (found using the GCC format __attribute__ for some crossfire functions).
Arvid Norlander 2009-02-17

common/map.c: Properly fill in op->more for multipart objects in containers.
  Multipart objects in containers can happen for customised monsters in
  generator inventories. This happened on /darcap/raffle/raffle1_u3.
Arvid Norlander 2009-02-17

README: Update the README file somewhat. It mentioned CVS and various other
  outdated things.
Arvid Norlander 2009-02-16

This is another step towards Python 3.x support, however in this commit there
are mostly fixes for various bugs in the existing found when working on the
porting. Also this commit drops support for Python 2.3 and older. This support
was already broken (some code already used modern features).
---